--- a/codes/README
+++ b/codes/README
@@ -1,6 +1,6 @@
-Parameter Setting
+## Parameter Setting
 ---
-P pressure mmHg
+### P pressure mmHg
 P1 = FPL = 20.0 ; 
 P2 = UV = 15.1;
 P3 = IVC = 5.1;
@@ -11,7 +11,7 @@ P7 = SVC = 5.1;
 P8 = PA = 51.6;
 P9 = DA = 48.5;
 ---
-complinance ml/mmhg
+### complinance ml/mmhg
 C1 = 1.4;
 C2 = 0.3;
 C3 = 0.2;
@@ -22,6 +22,7 @@ C7 = 0.1;
 C8 = 0.25;
 C9 = 0.14;
 ---
+
 R1 = 0.053;
 R2 = 0.0091;
 R3 = 0.0355;
